# aula18_api

./: README.md  exemplo_00.py  pyproject.toml
src/: controller.py  main.py  models.py  pokemon.db  schema.py
